# pytest-llm-rubric

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  publish.yml  release.yml
experiments/: stability_test.py  structured_output_test.py  test_claude_cli_backend.py  test_qwen_raw.py  test_qwen_thinking.py
src/pytest_llm_rubric/: __init__.py  calibration.py  defaults.py  find_local_model.py  find_model.py  golden_tests.py  plugin.py  preflight.py  utils.py
src/pytest_rubric_grader/: __init__.py  calibration.py  defaults.py  find_model.py  plugin.py
tests/: test_calibration.py  test_parse_ollama_host.py  test_plugin.py  test_preflight.py
