[project]
name = "pytest-llm-rubric"
version = "0.3.0"
description = "A pytest plugin for rubric-based LLM-as-judge testing with auto-discovery and preflight"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ugai", email = "ugai.sub1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.2",
    "any-llm-sdk[ollama]>=1.12,<2",
    "filelock>=3.25,<4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
ollama = []  # included in base; kept for backward compatibility
openai = ["any-llm-sdk[openai]>=1.12,<2"]
anthropic = ["any-llm-sdk[anthropic]>=1.12,<2"]

[project.urls]
Homepage = "https://github.com/ugai/pytest-llm-rubric"
Repository = "https://github.com/ugai/pytest-llm-rubric"
Issues = "https://github.com/ugai/pytest-llm-rubric/issues"

[project.entry-points.pytest11]
llm_rubric = "pytest_llm_rubric.plugin"

[build-system]
requires = ["uv_build>=0.10.10,<1"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running LLM backend (Ollama, API keys)",
    "llm_rubric: tests that use the judge_llm fixture (auto-applied by plugin)",
]

[dependency-groups]
dev = [
    "git-cliff>=2.9.0",
    "pre-commit>=4.5.1",
    "pytest-xdist>=3.8.0",
    "pytest-codeblocks>=0.17.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
